kubernetes/overlays/plasma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lti-example-tool
spec:
  ingressClassName: traefik
  rules:
    - host: __INGRESS_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lti-example-tool
                port:
                  number: 80
